--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,14 @@
 @tailwind utilities;
 
 /* Composants */
+.imgCircle {
+  @apply border shadow-xl rounded-full;
+}
+
+.arrowTop {
+  @apply z-10 flex items-center justify-center border w-auto h-auto tablette:w-6 tablette:h-6 rounded-full fixed
+}
+
+.itemMenu {
+  @apply font-bold text-lg text-center uppercase leading-10 w-auto px-4 py-1 rounded-md shadow-md border border-borderColor bg-hoverColor scale-95 transition-all hover:scale-125;
+}
