--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,21 @@
 }
 
 .arrowTop {
-  @apply z-10 flex items-center justify-center border w-auto h-auto tablette:w-6 tablette:h-6 rounded-full fixed
+  @apply z-10 flex bottom-1 right-1 items-center justify-center border w-auto h-auto tablette:w-6 tablette:h-6 rounded-full fixed hover:bg-hoverColor;
 }
 
 .itemMenu {
-  @apply font-bold text-lg text-center uppercase leading-10 w-auto px-4 py-1 rounded-md shadow-md border border-borderColor bg-hoverColor scale-95 transition-all hover:scale-125;
+  @apply font-bold text-lg text-center uppercase leading-10 w-auto px-4 py-1 rounded-md shadow-md border border-borderColor bg-hoverColor scale-95 transition-all hover:scale-110;
+}
+
+.group {
+  @apply border border-borderColor flex-1 py-2 px-6 text-xl;
+}
+
+.elementPrincipal {
+  @apply border flex -translate-x-1/2 left-1/2 absolute rounded-md font-bold;
+}
+
+.inputStyle {
+  @apply border border-borderColor pl-2 mt-2 h-12 w-full rounded-md font-bold hover:border-borderColorDark active:border-borderColorDark;
 }
