--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
 /* Composants */
 .imgCircle {
-  @apply border shadow-xl rounded-full;
+  @apply border shadow-xl rounded-full mobile:size-10;
 }
 
 .arrowTop {
