--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,7 @@
 }
 
 .card {
-  @apply bg-secondary dark:bg-secondaryDark flex flex-col p-4 2xl:w-5/12 xl:w-3/4 lg:w-5/6 mx-8 tablette:mx-0;
+  @apply bg-secondary dark:bg-secondaryDark flex p-4 2xl:w-5/12 xl:w-3/4 lg:w-5/6 mx-8 tablette:mx-0;
 }
 
 .articleHeader {
